# cpp-ondisk-nosql-db

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md
docs/: _config.yml  api.md  architecture.md  index.md  security.md
docs/_layouts/: default.html
include/api/: kv_controller.hpp
include/network/: binary_protocol.hpp  binary_server.hpp  connection_pool.hpp  metrics.hpp  streaming.hpp  tls_server.hpp
include/query/: query_engine.hpp
include/security/: api_key.hpp  audit.hpp  auth.hpp  encryption.hpp
include/storage/: btree_index.hpp  log_storage.hpp  lsm_tree.hpp  storage_engine.hpp  transaction.hpp
scripts/: run_security_tests.sh  security_scan.py
src/: CMakeLists.txt  api_key_manager.cpp  api_server.cpp  binary_server_main.cpp  client_demo.cpp  main.cpp  tls_client_demo.cpp  tls_server_main.cpp
src/api/: kv_controller.cpp
src/network/: binary_client.cpp  binary_protocol.cpp  binary_server.cpp  connection_pool.cpp  metrics.cpp  streaming.cpp  tls_client.cpp  tls_server.cpp  tls_utils.cpp
src/query/: query_engine.cpp
src/security/: api_key.cpp  audit.cpp  auth.cpp
src/storage/: btree_index.cpp  log_storage.cpp  lsm_tree.cpp  storage_engine.cpp  transaction.cpp
tests/: CMakeLists.txt  security_tests.cpp  test_api.cpp  test_binary_client.cpp  test_binary_protocol.cpp  test_btree_index.cpp  test_connection_pool.cpp  test_log_storage.cpp  test_lsm_tree.cpp  test_network_metrics.cpp  test_query_engine.cpp  test_streaming.cpp  test_transactions.cpp
